--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -35,6 +35,7 @@
 		"ng2-file-upload": "1.4.0",
 		"ngx-bootstrap": "5.5.0",
 		"ngx-cookie-service": "3.0.3",
+		"ngx-file-drop": "^9.0.1",
 		"ngx-pagination": "5.0.0",
 		"popper.js": "^1.16.1",
 		"proj4": "2.6.0",
