--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -29,7 +29,7 @@
   <name>UASDM Web</name>
 
   <properties>
-    <geoserver.version>2.14.2</geoserver.version>
+    <geoserver.version>2.14.2-custom</geoserver.version>
     <local.host>$${pageContext.request.contextPath}</local.host>
   </properties>
 
