--- a/uasdm-clusterodm/aws-config-staging.json
+++ b/uasdm-clusterodm/aws-config-staging.json
@@ -13,7 +13,7 @@
     "log-level": "debug",
     "debug": true,
     
-    "createRetries": 5,
+    "createRetries": 3,
 
     "monitoring": false,
     "maxRuntime": -1,
@@ -25,7 +25,7 @@
     
     "instanceLimit": 15,
 
-    "spot": true,
+    "spot": false,
     "imageSizeMapping": [
         {"maxImages": 40, "slug": "t3a.small", "spotPrice": 0.05, "storage": 60},
         {"maxImages": 80, "slug": "t3a.medium", "spotPrice": 0.05, "storage": 100},
