--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -21,13 +21,6 @@
   <name>UASDM Server</name>
   <description>The back-end database server for the uasdm project</description>
 
-  <properties>
-    <!-- Specify your development root database credentials here. -->
-    <root.db>postgres</root.db>
-    <root.user>postgres</root.user>
-    <root.pass>postgres</root.pass>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>javax.websocket</groupId>
@@ -319,10 +312,10 @@
       </build>
     </profile>
     <profile>
-      <id>patch</id>
+      <id>database</id>
       <activation>
         <property>
-          <name>patch</name>
+          <name>database</name>
         </property>
       </activation>
       <build>
@@ -333,20 +326,21 @@
             <version>1.2.1</version>
             <executions>
               <execution>
-                <id>patch</id>
+                <id>database</id>
                 <phase>validate</phase>
                 <goals>
                   <goal>java</goal>
                 </goals>
                 <configuration>
                   <executable>java</executable>
-                  <mainClass>net.geoprism.GeoprismPatcher</mainClass>
+                  <mainClass>net.geoprism.build.GeoprismDatabaseBuilder</mainClass>
                   <arguments>
                     <argument>--metadataDir=${project.basedir}/target/classes/metadata</argument>
-                    <argument>--rootUser=${root.user}</argument>
-                    <argument>--rootPass=${root.pass}</argument>
-                    <argument>--templateDb=${root.db}</argument>
-                    <argument>--clean=${root.clean}</argument>
+                    <argument>--rootUser=${db.rootUser}</argument>
+                    <argument>--rootPass=${db.rootPass}</argument>
+                    <argument>--templateDb=${db.rootDb}</argument>
+                    <argument>--clean=${db.clean}</argument>
+                    <argument>--patch=${db.patch}</argument>
                   </arguments>
                   <systemProperties>
                     <systemProperty>
