--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -60,7 +60,7 @@
 		"rimraf": "^3.0.2",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
-		"typescript": "^3.8.3",
+		"typescript": "3.8.3",
 		"webpack": "^4.42.1",
 		"webpack-bundle-analyzer": "^3.6.1",
 		"webpack-cli": "3.3.11",
