--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -7,10 +7,6 @@ s3.secretKey=INAmfvwRcO8pUPCTeJAROpvzVGHMP1RsDnu58SL2
 bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
-# Programmatic ecs fargate run access
-ecs.accessKey=AKIA32XPOGK7S2QZHXFN
-ecs.secretKey=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
-
 # url of the solr service
 solr.enabled=true
 
@@ -21,3 +17,15 @@ odm.url=http://localhost:3000/
 
 deployment.type=osmre
 public.workspace=image-public
+
+
+# Eros Synchronization related properties
+eros.ecs.accessKey=AKIA32XPOGK7S2QZHXFN
+eros.ecs.secretKey=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
+
+eros.ftp.serverUrl=52.13.165.218
+eros.ftp.username=richtest
+eros.ftp.password=richtest5697
+eros.ftp.passive=true
+eros.ftp.port=39538
+eros.ftp.targetPath=eros/test
