--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -23,9 +23,15 @@ public.workspace=image-public
 eros.ecs.accessKey=AKIA32XPOGK7S2QZHXFN
 eros.ecs.secretKey=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
 
+eros.ecs.cluster=arn:aws:ecs:us-east-1:813324710591:cluster/uasdm-fargate-erossync
+eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:1
+eros.ecs.containerName=idm-fargate-erossync
+eros.ecs.subnets=
+
 eros.ftp.serverUrl=52.13.165.218
 eros.ftp.username=richtest
 eros.ftp.password=richtest5697
 eros.ftp.passive=true
 eros.ftp.port=39538
 eros.ftp.targetPath=eros/test
+
