--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -38,6 +38,8 @@
 		"ngx-file-drop": "^9.0.1",
 		"ngx-pagination": "5.0.0",
 		"popper.js": "^1.16.1",
+		"primeicons": "^4.1.0",
+		"primeng": "^9.1.3",
 		"proj4": "2.6.0",
 		"rxjs": "6.5.4",
 		"tslib": "^1.11.1",
