--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   </modules>
 
   <properties>
-    <geoprism.version>0.10.1-SNAPSHOT</geoprism.version>
+    <geoprism.version>0.10.2</geoprism.version>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
