--- a/pom.xml
+++ b/pom.xml
@@ -91,24 +91,41 @@
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
+  
+  <profiles>
+    <profile>
+      <id>dependency-check</id>
+      <activation>
+        <property>
+          <name>dependency-check</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.owasp</groupId>
+            <artifactId>dependency-check-maven</artifactId>
+            <version>5.3.2</version>
+            <configuration>
+              <failBuildOnCVSS>7</failBuildOnCVSS>
+            </configuration>
+            <executions>
+              <execution>
+                <id>new-schema</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
-      <!--
-      <plugin>
-        <groupId>org.owasp</groupId>
-        <artifactId>dependency-check-maven</artifactId>
-        <version>5.3.2</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      -->      
-
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4.2</version>
