--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -62,6 +62,14 @@
       <groupId>net.geoprism</groupId>
       <artifactId>geoprism-server</artifactId>
       <version>${geoprism.version}</version>
+      <exclusions>
+        <!-- Conflicts with our version of aws -->
+        <exclusion>
+          <groupId>com.amazonaws</groupId>
+	      <artifactId>aws-java-sdk-s3</artifactId>
+        </exclusion>
+      </exclusions>
+      
     </dependency>
     <dependency>
       <groupId>net.geoprism</groupId>
@@ -99,7 +107,7 @@
     <dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk</artifactId>
-	  <version>1.11.884</version>
+	  <version>1.12.151</version>
 	</dependency>
     <dependency>
       <groupId>org.apache.solr</groupId>
