--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -16,7 +16,7 @@
 		"@angular/platform-browser-dynamic": "9.1.0",
 		"@angular/router": "9.1.0",
 		"@fortawesome/fontawesome-free": "^5.13.0",
-		"@mapbox/mapbox-gl-draw": "1.1.2",
+		"@mapbox/mapbox-gl-draw": "^1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.9.0",
 		"@types/file-saver": "2.0.1",
