--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -47,10 +47,17 @@
       <artifactId>javax.websocket-api</artifactId>
       <version>1.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+    
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.9</version>
+      <version>4.5.13</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
     <dependency>
@@ -123,41 +130,19 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>1.24</version>
-      <exclusions>
-        <!-- Conflicts with our version of aws -->
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-        </exclusion>
-        <!-- Conflicts with our version of geotools -->
-        <exclusion>
-          <groupId>org.apache.sis.storage</groupId>
-          <artifactId>sis-netcdf</artifactId>
-        </exclusion>
-        <exclusion>
-          <artifactId>geoapi</artifactId>
-          <groupId>org.opengis</groupId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.cxf</groupId>
-          <artifactId>cxf-rt-rs-client</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>2.2.1</version>
+      <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parsers-standard-package</artifactId>
+      <version>2.2.1</version>
+    </dependency>    
     <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-core</artifactId>
-      <version>1.24</version>
+      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
@@ -168,7 +153,7 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>3.6.0</version>
+      <version>3.6.3</version>
       <type>pom</type>
       <exclusions>
         <exclusion>
@@ -184,7 +169,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.16.0</version>
+      <version>2.17.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
