--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -16,13 +16,13 @@
 		"@angular/platform-browser-dynamic": "9.1.0",
 		"@angular/router": "9.1.0",
 		"@fortawesome/fontawesome-free": "^5.13.0",
-		"@mapbox/mapbox-gl-draw": "^1.3.0",
+		"@mapbox/mapbox-gl-draw": "1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.9.0",
 		"@types/file-saver": "2.0.1",
 		"@types/geojson": "7946.0.7",
 		"@types/google-libphonenumber": "^7.4.17",
-		"@types/mapbox-gl": "1.8.1",
+		"@types/mapbox-gl": "1.13.2",
 		"@types/proj4": "2.5.0",
 		"angular-animations": "0.0.10",
 		"angular-tree-component": "8.5.6",
@@ -31,7 +31,7 @@
 		"file-saver": "2.0.2",
 		"fine-uploader": "5.16.2",
 		"google-libphonenumber": "^3.2.8",
-		"mapbox-gl": "1.9.0",
+		"mapbox-gl": "1.13.2",
 		"ng2-file-upload": "1.4.0",
 		"ngx-bootstrap": "5.5.0",
 		"ngx-cookie-service": "3.0.3",
